# claude-mascot

./: .gitignore  .mcp.json  CHANGELOG.md  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
characters/fubao/: art.py  character.json  messages.en.json  messages.ko.json
characters/fubao/frames/large/: angry_blink.txt  happy_special.txt  love_idle.txt  neutral_idle.txt  sad_idle.txt  shy_idle.txt  surprised_special.txt
characters/fubao/frames/medium/: angry_blink.txt  happy_special.txt  love_idle.txt  neutral_special.txt  sad_blink.txt  shy_special.txt  surprised_special.txt
characters/fubao/frames/small/: angry_blink.txt  happy_idle.txt  love_special.txt  neutral_idle.txt  sad_idle.txt  shy_special.txt  surprised_special.txt
characters/fubao/raw/: SOURCES.md
characters/nabi/: art.py  character.json  emotion_rules.json  messages.en.json  messages.ko.json
characters/nabi/ascii/: angry.txt  happy.txt  love.txt  neutral.txt  sad.txt  shy.txt  surprised.txt
docs/superpowers/plans/: 2026-04-23-claude-mascot-plugin.md  2026-04-24-fubao-character.md
docs/superpowers/specs/: 2026-04-23-claude-mascot-plugin-design.md  2026-04-24-fubao-character-design.md
hooks/: hooks.json
mcp_server/: character.py  display.py  emotion.py  inline.py  pane.py  server.py
mcp_server/hooks/: on_stop.py  session_end.py  session_start.py
scripts/: prerender.py
tests/: test_character.py  test_display_dispatch.py  test_emotion.py  test_fubao.py  test_prerender.py
