[project]
name = "claude-mascot"
version = "0.2.0"
description = "Terminal mascot reacting to Claude Code activity (tsundere cat and friends)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
